@@ -1,12 +1,12 @@
 import logging
 
-from borgmatic.borg import environment
+from borgmatic.borg import environment, feature
 from borgmatic.execute import execute_command
 
 logger = logging.getLogger(__name__)
 
 
-def _make_prune_flags(retention_config):
+def make_prune_flags(retention_config):
     '''
     Given a retention config dict mapping from option name to value, tranform it into an iterable of
     command-line name-value flag pairs.
@@ -23,11 +23,9 @@ def _make_prune_flags(retention_config):
         )
     '''
     config = retention_config.copy()
-
-    if 'prefix' not in config:
-        config['prefix'] = '{hostname}-'
-    elif not config['prefix']:
-        config.pop('prefix')
+    prefix = config.pop('prefix', '{hostname}-')
+    if prefix:
+        config['glob_archives'] = f'{prefix}*'
 
     return (
         ('--' + option_name.replace('_', '-'), str(value)) for option_name, value in config.items()
@@ -39,6 +37,7 @@ def prune_archives(
     repository,
     storage_config,
     retention_config,
+    local_borg_version,
     local_path='borg',
     remote_path=None,
     stats=False,
@@ -55,7 +54,7 @@ def prune_archives(
 
     full_command = (
         (local_path, 'prune')
-        + tuple(element for pair in _make_prune_flags(retention_config) for element in pair)
+        + tuple(element for pair in make_prune_flags(retention_config) for element in pair)
         + (('--remote-path', remote_path) if remote_path else ())
         + (('--umask', str(umask)) if umask else ())
         + (('--lock-wait', str(lock_wait)) if lock_wait else ())
@@ -65,6 +64,11 @@ def prune_archives(
         + (('--debug', '--show-rc') if logger.isEnabledFor(logging.DEBUG) else ())
         + (('--dry-run',) if dry_run else ())
         + (tuple(extra_borg_options.split(' ')) if extra_borg_options else ())
+        + (
+            ('--repo',)
+            if feature.available(feature.Feature.SEPARATE_REPOSITORY_ARCHIVE, local_borg_version)
+            else ()
+        )
         + (repository,)
     )
 
