@@ -21,20 +21,20 @@ def insert_execute_command_mock(prune_command, output_log_level):
 BASE_PRUNE_FLAGS = (('--keep-daily', '1'), ('--keep-weekly', '2'), ('--keep-monthly', '3'))
 
 
-def test_make_prune_flags_returns_flags_from_config_plus_default_prefix():
+def test_make_prune_flags_returns_flags_from_config_plus_default_prefix_glob():
     retention_config = OrderedDict((('keep_daily', 1), ('keep_weekly', 2), ('keep_monthly', 3)))
 
-    result = module._make_prune_flags(retention_config)
+    result = module.make_prune_flags(retention_config)
 
-    assert tuple(result) == BASE_PRUNE_FLAGS + (('--prefix', '{hostname}-'),)
+    assert tuple(result) == BASE_PRUNE_FLAGS + (('--glob-archives', '{hostname}-*'),)
 
 
 def test_make_prune_flags_accepts_prefix_with_placeholders():
     retention_config = OrderedDict((('keep_daily', 1), ('prefix', 'Documents_{hostname}-{now}')))
 
-    result = module._make_prune_flags(retention_config)
+    result = module.make_prune_flags(retention_config)
 
-    expected = (('--keep-daily', '1'), ('--prefix', 'Documents_{hostname}-{now}'))
+    expected = (('--keep-daily', '1'), ('--glob-archives', 'Documents_{hostname}-{now}*'))
 
     assert tuple(result) == expected
 
@@ -42,7 +42,7 @@ def test_make_prune_flags_accepts_prefix_with_placeholders():
 def test_make_prune_flags_treats_empty_prefix_as_no_prefix():
     retention_config = OrderedDict((('keep_daily', 1), ('prefix', '')))
 
-    result = module._make_prune_flags(retention_config)
+    result = module.make_prune_flags(retention_config)
 
     expected = (('--keep-daily', '1'),)
 
@@ -52,7 +52,7 @@ def test_make_prune_flags_treats_empty_prefix_as_no_prefix():
 def test_make_prune_flags_treats_none_prefix_as_no_prefix():
     retention_config = OrderedDict((('keep_daily', 1), ('prefix', None)))
 
-    result = module._make_prune_flags(retention_config)
+    result = module.make_prune_flags(retention_config)
 
     expected = (('--keep-daily', '1'),)
 
@@ -64,59 +64,97 @@ PRUNE_COMMAND = ('borg', 'prune', '--keep-daily', '1', '--keep-weekly', '2', '--
 
 def test_prune_archives_calls_borg_with_parameters():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('repo',), logging.INFO)
 
     module.prune_archives(
-        dry_run=False, repository='repo', storage_config={}, retention_config=retention_config
+        dry_run=False,
+        repository='repo',
+        storage_config={},
+        retention_config=retention_config,
+        local_borg_version='1.2.3',
+    )
+
+
+def test_prune_archives_with_borg_features_calls_borg_with_repo_flag():
+    retention_config = flexmock()
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
+        BASE_PRUNE_FLAGS
+    )
+    flexmock(module.feature).should_receive('available').and_return(True)
+    insert_execute_command_mock(PRUNE_COMMAND + ('--repo', 'repo'), logging.INFO)
+
+    module.prune_archives(
+        dry_run=False,
+        repository='repo',
+        storage_config={},
+        retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
 
 
 def test_prune_archives_with_log_info_calls_borg_with_info_parameter():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--info', 'repo'), logging.INFO)
     insert_logging_mock(logging.INFO)
 
     module.prune_archives(
-        repository='repo', storage_config={}, dry_run=False, retention_config=retention_config
+        repository='repo',
+        storage_config={},
+        dry_run=False,
+        retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
 
 
 def test_prune_archives_with_log_debug_calls_borg_with_debug_parameter():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--debug', '--show-rc', 'repo'), logging.INFO)
     insert_logging_mock(logging.DEBUG)
 
     module.prune_archives(
-        repository='repo', storage_config={}, dry_run=False, retention_config=retention_config
+        repository='repo',
+        storage_config={},
+        dry_run=False,
+        retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
 
 
 def test_prune_archives_with_dry_run_calls_borg_with_dry_run_parameter():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--dry-run', 'repo'), logging.INFO)
 
     module.prune_archives(
-        repository='repo', storage_config={}, dry_run=True, retention_config=retention_config
+        repository='repo',
+        storage_config={},
+        dry_run=True,
+        retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
 
 
 def test_prune_archives_with_local_path_calls_borg_via_local_path():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(('borg1',) + PRUNE_COMMAND[1:] + ('repo',), logging.INFO)
 
     module.prune_archives(
@@ -124,15 +162,17 @@ def test_prune_archives_with_local_path_calls_borg_via_local_path():
         repository='repo',
         storage_config={},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
         local_path='borg1',
     )
 
 
 def test_prune_archives_with_remote_path_calls_borg_with_remote_path_parameters():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--remote-path', 'borg1', 'repo'), logging.INFO)
 
     module.prune_archives(
@@ -140,15 +180,17 @@ def test_prune_archives_with_remote_path_calls_borg_with_remote_path_parameters(
         repository='repo',
         storage_config={},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
         remote_path='borg1',
     )
 
 
 def test_prune_archives_with_stats_calls_borg_with_stats_parameter_and_warning_output_log_level():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--stats', 'repo'), logging.WARNING)
 
     module.prune_archives(
@@ -156,15 +198,17 @@ def test_prune_archives_with_stats_calls_borg_with_stats_parameter_and_warning_o
         repository='repo',
         storage_config={},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
         stats=True,
     )
 
 
 def test_prune_archives_with_stats_and_log_info_calls_borg_with_stats_parameter_and_info_output_log_level():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_logging_mock(logging.INFO)
     insert_execute_command_mock(PRUNE_COMMAND + ('--stats', '--info', 'repo'), logging.INFO)
 
@@ -173,15 +217,17 @@ def test_prune_archives_with_stats_and_log_info_calls_borg_with_stats_parameter_
         repository='repo',
         storage_config={},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
         stats=True,
     )
 
 
 def test_prune_archives_with_files_calls_borg_with_list_parameter_and_warning_output_log_level():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--list', 'repo'), logging.WARNING)
 
     module.prune_archives(
@@ -189,15 +235,17 @@ def test_prune_archives_with_files_calls_borg_with_list_parameter_and_warning_ou
         repository='repo',
         storage_config={},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
         files=True,
     )
 
 
 def test_prune_archives_with_files_and_log_info_calls_borg_with_list_parameter_and_info_output_log_level():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_logging_mock(logging.INFO)
     insert_execute_command_mock(PRUNE_COMMAND + ('--info', '--list', 'repo'), logging.INFO)
 
@@ -206,6 +254,7 @@ def test_prune_archives_with_files_and_log_info_calls_borg_with_list_parameter_a
         repository='repo',
         storage_config={},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
         files=True,
     )
 
@@ -213,9 +262,10 @@ def test_prune_archives_with_files_and_log_info_calls_borg_with_list_parameter_a
 def test_prune_archives_with_umask_calls_borg_with_umask_parameters():
     storage_config = {'umask': '077'}
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--umask', '077', 'repo'), logging.INFO)
 
     module.prune_archives(
@@ -223,15 +273,17 @@ def test_prune_archives_with_umask_calls_borg_with_umask_parameters():
         repository='repo',
         storage_config=storage_config,
         retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
 
 
 def test_prune_archives_with_lock_wait_calls_borg_with_lock_wait_parameters():
     storage_config = {'lock_wait': 5}
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--lock-wait', '5', 'repo'), logging.INFO)
 
     module.prune_archives(
@@ -239,14 +291,16 @@ def test_prune_archives_with_lock_wait_calls_borg_with_lock_wait_parameters():
         repository='repo',
         storage_config=storage_config,
         retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
 
 
 def test_prune_archives_with_extra_borg_options_calls_borg_with_extra_options():
     retention_config = flexmock()
-    flexmock(module).should_receive('_make_prune_flags').with_args(retention_config).and_return(
+    flexmock(module).should_receive('make_prune_flags').with_args(retention_config).and_return(
         BASE_PRUNE_FLAGS
     )
+    flexmock(module.feature).should_receive('available').and_return(False)
     insert_execute_command_mock(PRUNE_COMMAND + ('--extra', '--options', 'repo'), logging.INFO)
 
     module.prune_archives(
@@ -254,4 +308,5 @@ def test_prune_archives_with_extra_borg_options_calls_borg_with_extra_options():
         repository='repo',
         storage_config={'extra_borg_options': {'prune': '--extra --options'}},
         retention_config=retention_config,
+        local_borg_version='1.2.3',
     )
