@@ -1,6 +1,8 @@
 2.0.0.dev0
  * #557: Support for Borg 2 while still working with Borg 1. If you install Borg 2, you'll need to
-   manually "borg transfer" or "borgmatic transfer" any existing Borg 1 repositories before use.
+   manually "borg transfer" or "borgmatic transfer" any existing Borg 1 repositories before use. See
+   the Borg 2.0 changelog summary for more information about Borg 2:
+   https://www.borgbackup.org/releases/borg-2.0.html
  * #565: Fix handling of "repository" and "data" consistency checks to prevent invalid Borg flags.
  * #566: Modify "mount" and "extract" actions to require the "--repository" flag when multiple
    repositories are configured.
